--- a/catalog.html
+++ b/catalog.html
@@ -56,19 +56,21 @@
       <div class="filter">
         <div class="prise-range-slider">
           <!--Здесь будет слайдер-->
+          <input type="number" name="min-range" value="0">
+          <input type="number" name="max-range" value="30000">
         </div>
         <ul class="produsers-selection-list">
-          <li class="produsers-selection-item">BOSCH</li>
-          <li class="produsers-selection-item">ИНТЕРСКОЛ</li>
-          <li class="produsers-selection-item">MAKIta</li>
-          <li class="produsers-selection-item">Dewalt</li>
-          <li class="produsers-selection-item">Hitachi</li>
+          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="BOSCH">BOSCH</li>
+          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="ИНТЕРСКОЛ">ИНТЕРСКОЛ</li>
+          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="MAKIta">MAKIta</li>
+          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="Dewalt">Dewalt</li>
+          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="Hitachi">Hitachi</li>
         </ul>
         <ul class="power-choice-list">
-          <li class="power-choice-item">Аккумуляторные</li>
-          <li class="power-choice-item">Сетевые</li>
+          <li class="power-choice-item"><input type="radio" name="Аккумуляторные" value="Аккумуляторные">Аккумуляторные</li>
+          <li class="power-choice-item"><input type="radio" name="Сетевые" value="Сетевые">Сетевые</li>
         </ul>
-        <a href="#">Показать</a>
+        <button type="submit">Показать</button>
       </div>
       <div class="sort">
         <h2>Сортировка</h2>
@@ -81,7 +83,7 @@
         </ul>
         <ul class="product-list">
           <li class="product-list-item">
-            <img src="img/Perforator_1.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
@@ -91,7 +93,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_2.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
@@ -101,7 +103,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_3.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
@@ -110,7 +112,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_1.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
@@ -120,7 +122,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_2.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
@@ -130,7 +132,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_3.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
@@ -139,7 +141,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_1.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
@@ -149,7 +151,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_2.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
@@ -159,7 +161,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/Perforator_3.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
             <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
