--- a/catalog.html
+++ b/catalog.html
@@ -23,10 +23,7 @@
     </div>
     <div class="header-middle-wrapper">
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <div class="address">
-        <b>+7 (812) 555-05-55</b>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </div>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
       <ul class="user-navigation">
         <li class="login-link"><a href="#">Вход</a></li>
         <li class="registration"><a href="#">Регистрация</a></li>
@@ -54,23 +51,51 @@
     </div>
     <section>
       <div class="filter">
-        <div class="prise-range-slider">
+        <form class="prise-range-slider" action="https://echo.htmlacademy.ru" method="post">
           <!--Здесь будет слайдер-->
           <input type="number" name="min-range" value="0">
           <input type="number" name="max-range" value="30000">
-        </div>
-        <ul class="produsers-selection-list">
-          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="BOSCH">BOSCH</li>
-          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="ИНТЕРСКОЛ">ИНТЕРСКОЛ</li>
-          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="MAKIta">MAKIta</li>
-          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="Dewalt">Dewalt</li>
-          <li class="produsers-selection-item"><input type="checkbox" name="perforator-type" value="Hitachi">Hitachi</li>
-        </ul>
-        <ul class="power-choice-list">
-          <li class="power-choice-item"><input type="radio" name="Аккумуляторные" value="Аккумуляторные">Аккумуляторные</li>
-          <li class="power-choice-item"><input type="radio" name="Сетевые" value="Сетевые">Сетевые</li>
-        </ul>
-        <button type="submit">Показать</button>
+      </div>
+      <ul class="produsers-selection-list">
+        <li class="produsers-selection-item">
+          <label>
+            <input type="checkbox" name="perforator-type" value="BOSCH">BOSCH
+          </label>
+        </li>
+        <li class="produsers-selection-item">
+          <label>
+            <input type="checkbox" name="perforator-type" value="Интерскол">Интерскол
+          </label>
+        </li>
+        <li class="produsers-selection-item">
+          <label><input type="checkbox" name="perforator-type" value="MAKIta">Makita
+          </label>
+        </li>
+        <li class="produsers-selection-item">
+          <label>
+            <input type="checkbox" name="perforator-type" value="Dewalt">Dewalt
+          </label>
+        </li>
+        <li class="produsers-selection-item">
+          <label>
+            <input type="checkbox" name="perforator-type" value="Hitachi">Hitachi
+          </label>
+        </li>
+      </ul>
+      <ul class="power-choice-list">
+        <li class="power-choice-item">
+          <label>
+            <input type="radio" name="drill-type" value="Аккумуляторные">Аккумуляторные
+          </label>
+        </li>
+        <li class="power-choice-item">
+          <label>
+            <input type="radio" name="drill-type" value="Сетевые">Сетевые
+          </label>
+        </li>
+      </ul>
+      <button type="submit">Показать</button>
+      </form>
       </div>
       <div class="sort">
         <h2>Сортировка</h2>
@@ -84,7 +109,9 @@
         <ul class="product-list">
           <li class="product-list-item">
             <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 3000</h3>
+            </a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
             <div class="add product">
@@ -94,7 +121,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 6000</h3>
+            </a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
             <div class="add product">
@@ -104,7 +133,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 2000</h3>
+            </a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
               <p><a href="#">Купить</a></p>
@@ -113,7 +144,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 3000</h3>
+            </a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
             <div class="add product">
@@ -123,7 +156,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 6000</h3>
+            </a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
             <div class="add product">
@@ -133,7 +168,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 2000</h3>
+            </a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
               <p><a href="#">Купить</a></p>
@@ -142,7 +179,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 3000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 3000</h3>
+            </a>
             <p class="old price">22500 Р.</p>
             <p><a href="#">15500 Р.</a></p>
             <div class="add product">
@@ -152,7 +191,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 6000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 6000</h3>
+            </a>
             <p class="old price">30500 Р.</p>
             <p><a href="#">25500 Р.</a></p>
             <div class="add product">
@@ -162,7 +203,9 @@
           </li>
           <li class="product-list-item">
             <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
-            <a href="#"><h3 class="product-name">Перфоратор Bosch bfg 2000</h3></a>
+            <a href="#">
+              <h3 class="product-name">Перфоратор Bosch bfg 2000</h3>
+            </a>
             <p><a href="#">12500 Р.</a></p>
             <div class="add product">
               <p><a href="#">Купить</a></p>
@@ -197,15 +240,13 @@
         <li class="footer-navigation-item"><a href="#">Контакты</a></li>
       </ul>
     </div>
-    <div class="address">
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
-      <ul class="footer-category-list">
-        <li class="footer-category-item"><a href="#">Материалы</a></li>
-        <li class="footer-category-item"><a href="#">Техника</a></li>
-        <li class="footer-category-item"><a href="#">Инструмент</a></li>
-        <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
-      </ul>
-    </div>
+    <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
+    <ul class="footer-category-list">
+      <li class="footer-category-item"><a href="#">Материалы</a></li>
+      <li class="footer-category-item"><a href="#">Техника</a></li>
+      <li class="footer-category-item"><a href="#">Инструмент</a></li>
+      <li class="footer-category-item"><a href="#">Спецпредложения</a></li>
+    </ul>
     <div class="copyright">
       <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
       <ul class="social-list">
@@ -221,6 +262,14 @@
       </div>
     </div>
   </footer>
+
+  <div class="modal-shoping-chart-popup">
+    <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+      <p class="popup-title">Товар добавлен в корзину!</p>
+      <a href="#">Оформить заказ</a>
+      <button type="button">Продолжить покупки</button>
+    </form>
+  </div>
 
 </body>
 
