--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <div class="header-logo">
         <a href="#"><img src="img/index-logo.png" width="220px" height="47px" alt="Логотип Техномарт"></a>
       </div>
-      <div class="search-form">
+      <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
-          <label for="your-name">Поиск</label>
-          <input id="your-name" type="text" name="name" placeholder="Поиск">
+          <label for="search">Поиск</label>
+          <input id="search" type="text" name="name" placeholder="Поиск">
         </p>
-      </div>
+      </form>
       <ul class="order-interface">
         <li class="bookmarks"><a href="#">Закладки:0</a></li>
         <li class="cart"><a href="#">Корзина:0</a></li>
@@ -26,10 +26,7 @@
     </div>
     <div class="header-middle-wrapper">
       <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <div class="header-contacts">
-        <b>+7 (812) 555-05-55</b>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </div>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
       <ul class="user-navigation">
         <li class="login-link"><a href="login.html">Вход</a></li>
         <li class="registration"><a href="registration.html">Регистрация</a></li>
@@ -72,15 +69,17 @@
       </ul>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <figure class="galery-content">
-            <h2>Дрели всем на радость</h2>
-            <a href="#"><img src="img/drill-baner.jpg" alt="Элемент каталога 1"></a>
-          </figure>
-          <button class="galery-button-forward" type="button">Вперед</button>
-          <button class="galery-button-backward" type="button">Назад</button>
+          <h2>Дрели всем на радость</h2>
+          <a href="#">
+            <img src="img/drill-baner.jpg" alt="Элемент каталога 1">
+          </a>
+          <a href="#">Открыть каталог</a>
         </li>
-        <li class="catalog-button"><a href="#">Открыть каталог</a></li>
       </ul>
+      <div class="slider-control">
+        <button class="galery-button-forward" type="button">Вперед</button>
+        <button class="galery-button-backward" type="button">Назад</button>
+      </div>
     </section>
     <section>
       <div class="popular">
@@ -194,23 +193,6 @@
         <img src="img/map.png" alt="Место расположения">
         <a href="#">Заблудились? Напишите нам!</a>
       </div>
-      <div class="contacts-popup">
-        <form class="user" method="post" action="https://echo.htmlacademy.ru">
-          <p>
-            <label for="your-name">Ваше имя</label>
-            <input id="your-name" type="text" name="name" placeholder="Имя фамилия">
-          </p>
-          <p>
-            <label for="your-email">Ваш e-mail</label>
-            <input id="your-email" type="email" name="email" placeholder="email@example.ru">
-          </p>
-          <p>
-            <label for="text">Текст письма:</label>
-            <input id="text" type="text" name="next" placeholder="В свободной форме">
-          </p>
-          <button type="submit">Отправить</button>
-        </form>
-      </div>
     </section>
   </main>
 
@@ -226,7 +208,7 @@
       </ul>
     </div>
     <div class="footer-contacts">
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 +7 (812) 555-05-55</p>
+      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
       <ul class="footer-category-list">
         <li class="footer-category-item"><a href="#">Материалы</a></li>
         <li class="footer-category-item"><a href="#">Техника</a></li>
@@ -249,6 +231,24 @@
       </div>
     </div>
   </footer>
+
+  <div class="modal-contacts-popup">
+    <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label for="your-name">Ваше имя</label>
+        <input id="your-name" type="text" name="name" placeholder="Имя фамилия">
+      </p>
+      <p>
+        <label for="your-email">Ваш e-mail</label>
+        <input id="your-email" type="email" name="email" placeholder="email@example.ru">
+      </p>
+      <p>
+        <label for="text">Текст письма:</label>
+        <input id="text" type="text" name="next" placeholder="В свободной форме">
+      </p>
+      <button type="submit">Отправить</button>
+    </form>
+  </div>
 
 </body>
 
