--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +17,7 @@
       </div>
       <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
         <p>
-          <label for="search">Поиск</label>
+          <label class="search-form-label" for="search">Поиск</label>
           <input id="search" type="text" name="name" placeholder="Поиск">
         </p>
       </form>
@@ -25,25 +28,30 @@
       </ul>
     </div>
     <div class="header-middle-wrapper">
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
+      <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <address>
+        <p class="phone">+7 (812) 555-05-55</p>
+        <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
+      </address>
       <ul class="user-navigation">
-        <li class="login-link"><a href="login.html">Вход</a></li>
+        <li class="login-link"><a href="login.html">Войти</a></li>
         <li class="registration"><a href="registration.html">Регистрация</a></li>
       </ul>
     </div>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
+        <li><a href="#">Главная</a></li>
+        <li><a href="about us.html">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
         <li><a href="news.html">Новости</a></li>
-        <li><a href="price.html">Прайс-лист</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="price.html">Спецпредложения</a></li>
+        <li><a href="catalog.html">Доставка</a></li>
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
+  <!--
     <section>
       <ul class="category-list">
         <li class="category-item">
@@ -253,3 +261,4 @@
 </body>
 
 </html>
+-->
