--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="header-middle-wrapper">
       <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <address>
+      <address class="header-address">
         <p class="phone">+7 (812) 555-05-55</p>
         <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
       </address>
