--- a/catalog.html
+++ b/catalog.html
@@ -12,9 +12,12 @@
       <div class="header-logo">
         <a href="#"><img src="img/index-logo.png" width="220px" height="47px" alt="Логотип Техномарт"></a>
       </div>
-      <div class="search-form">
-        <!--Тут будет форма поиска-->
-      </div>
+      <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+        <p>
+          <label class="search-form-label" for="search">Поиск</label>
+          <input class="search-form" id="search" type="text" name="name" placeholder="Поиск">
+        </p>
+      </form>
       <ul class="order-interface">
         <li class="bookmarks"><a href="#">Закладки:0</a></li>
         <li class="cart"><a href="#">Корзина:0</a></li>
@@ -22,19 +25,24 @@
       </ul>
     </div>
     <div class="header-middle-wrapper">
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
+      <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <address class="header-address">
+        <p class="phone">+7 (812) 555-05-55</p>
+        <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
+      </address>
       <ul class="user-navigation">
-        <li class="login-link"><a href="#">Вход</a></li>
-        <li class="registration"><a href="#">Регистрация</a></li>
+        <li class="login-link"><a href="login.html">Войти</a></li>
+        <li class="registration"><a href="registration.html">Регистрация</a></li>
       </ul>
     </div>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
+        <li><a href="#">Главная</a></li>
+        <li><a href="about us.html">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
         <li><a href="news.html">Новости</a></li>
-        <li><a href="price.html">Прайс-лист</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="price.html">Спецпредложения</a></li>
+        <li><a href="catalog.html">Доставка</a></li>
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
     </nav>
@@ -52,49 +60,44 @@
     <section>
       <div class="filter">
         <form class="prise-range-slider" action="https://echo.htmlacademy.ru" method="post">
-          <!--Здесь будет слайдер-->
-          <input type="number" name="min-range" value="0">
-          <input type="number" name="max-range" value="30000">
-      <ul class="produsers-selection-list">
-        <li class="produsers-selection-item">
-          <label>
-            <input type="checkbox" name="perforator-type" value="BOSCH">BOSCH
-          </label>
-        </li>
-        <li class="produsers-selection-item">
-          <label>
-            <input type="checkbox" name="perforator-type" value="Интерскол">Интерскол
-          </label>
-        </li>
-        <li class="produsers-selection-item">
-          <label><input type="checkbox" name="perforator-type" value="MAKIta">Makita
-          </label>
-        </li>
-        <li class="produsers-selection-item">
-          <label>
-            <input type="checkbox" name="perforator-type" value="Dewalt">Dewalt
-          </label>
-        </li>
-        <li class="produsers-selection-item">
-          <label>
-            <input type="checkbox" name="perforator-type" value="Hitachi">Hitachi
-          </label>
-        </li>
-      </ul>
-      <ul class="power-choice-list">
-        <li class="power-choice-item">
-          <label>
-            <input type="radio" name="drill-type" value="Аккумуляторные">Аккумуляторные
-          </label>
-        </li>
-        <li class="power-choice-item">
-          <label>
-            <input type="radio" name="drill-type" value="Сетевые">Сетевые
-          </label>
-        </li>
-      </ul>
-      <button type="submit">Показать</button>
-      </form>
+          <div class="value">
+            <input type="number" name="min-range" value="0">
+            <input type="number" name="max-range" value="30000">
+          </div>
+          <ul class="produsers-selection-list">
+            <li class="produsers-selection-item">
+              <input class="checkbox" type="checkbox" id="box-1">
+              <label class="checkbox-label" for="box-1">Bosch</label>
+            </li>
+            <li class="produsers-selection-item">
+              <input class="checkbox" type="checkbox" id="box-2">
+              <label class="checkbox-label" for="box-2">Интерскол</label>
+            </li>
+            <li class="produsers-selection-item">
+              <input class="checkbox" type="checkbox" id="box-3">
+              <label class="checkbox-label" for="box-3">Makita</label>
+            </li>
+            <li class="produsers-selection-item">
+              <input class="checkbox" type="checkbox" id="box-4">
+              <label class="checkbox-label" for="box-4">Dewalt</label>
+            </li>
+            <li class="produsers-selection-item">
+              <input class="checkbox" type="checkbox" id="box-5">
+              <label class="checkbox-label" for="box-5">Hitachi</label>
+            </li>
+          </ul>
+          <ul class="power-choice-list">
+            <li class="power-choice-item">
+              <input class="checkbox" type="radio" id="radio-1" name="drill-type">
+              <label class="radio-label" for="radio-1">Акумуляторные</label>
+            </li>
+            <li class="power-choice-item">
+              <input class="checkbox" type="radio" id="radio-2" name="drill-type">
+              <label class="radio-label" for="radio-2">Сетевые</label>
+            </li>
+          </ul>
+          <button type="submit">Показать</button>
+        </form>
       </div>
       <div class="sort">
         <h2>Сортировка</h2>
@@ -107,7 +110,7 @@
         </ul>
         <ul class="product-list">
           <li class="product-list-item">
-            <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_1.jpg" alt="Перфоратор Bosch bfg 3000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 3000</h3>
             </a>
@@ -119,7 +122,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 6000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 6000</h3>
             </a>
@@ -131,7 +134,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 2000</h3>
             </a>
@@ -142,7 +145,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_1.jpg" alt="Перфоратор Bosch bfg 3000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 3000</h3>
             </a>
@@ -154,7 +157,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 6000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 6000</h3>
             </a>
@@ -166,7 +169,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 2000</h3>
             </a>
@@ -177,7 +180,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_1.jpg" alt="Перфоратор Bosch bfg 3000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 3000</h3>
             </a>
@@ -189,7 +192,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 6000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 6000</h3>
             </a>
@@ -201,7 +204,7 @@
             </div>
           </li>
           <li class="product-list-item">
-            <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
+            <img src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 2000">
             <a href="#">
               <h3 class="product-name">Перфоратор Bosch bfg 2000</h3>
             </a>
@@ -230,7 +233,7 @@
 
   <footer>
     <div class="footer-logo">
-      <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Логотип Техномарт"></a>
+      <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Техномарт"></a>
       <ul class="foter-navigation-list">
         <li class="footer-navigation-item"><a href="#">Компания</a></li>
         <li class="footer-navigation-item"><a href="#">Новости</a></li>
@@ -257,7 +260,7 @@
         <b>Обратная связь:</b>
         <a class="feedback" href="mail@htmlacademy.ru">HTML Academy</a>
         <b>Разработано:</b>
-        <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
+        <a class="create-by" href="https://htmlacademy.ru">HTML Academy</a>
       </div>
     </div>
   </footer>
