--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav class="main-navigation">
       <ul class="site-navigation">
         <li><a href="#">Главная</a></li>
-        <li><a href="about us.html">Компания</a></li>
+        <li><a href="about-us.html">Компания</a></li>
         <li><a href="catalog.html">Каталог</a></li>
         <li><a href="news.html">Новости</a></li>
         <li><a href="price.html">Спецпредложения</a></li>
@@ -51,7 +51,7 @@
     </nav>
   </header>
 
-  <!--
+  <main>
     <section>
       <ul class="category-list">
         <li class="category-item">
@@ -96,7 +96,7 @@
       </div>
       <ul class="popular-goods-list">
         <li class="product-goods-item">
-          <img src="img/perforator_1.jpg" alt="Картинка перфоратора">
+          <img src="img/perforator_1.jpg" alt="Перфоратор Bosch bfg 9000">
           <a href="#">
             <h3 class="product-name">Перфоратор Bosch bfg 9000</h3>
           </a>
@@ -108,7 +108,7 @@
           </div>
         </li>
         <li class="product-goods-item">
-          <img src="img/perforator_2.jpg" alt="Картинка перфоратора">
+          <img src="img/perforator_2.jpg" alt="Перфоратор Bosch bfg 3000">
           <a href="#">
             <h3 class="product-name">Перфоратор Bosch bfg 3000</h3>
           </a>
@@ -120,7 +120,7 @@
           </div>
         </li>
         <li class="product-goods-item">
-          <img src="img/perforator_3.jpg" alt="Картинка перфоратора">
+          <img src="img/perforator_3.jpg" alt="Перфоратор Bosch bfg 6000">
           <a href="#">
             <h3 class="product-name">Перфоратор Bosch bfg 6000</h3>
           </a>
@@ -132,7 +132,7 @@
           </div>
         </li>
         <li class="product-goods-item">
-          <img src="img/perforator_4.jpg" alt="Картинка перфоратора">
+          <img src="img/perforator_4.jpg" alt="Перфоратор Bosch bfg 2000">
           <a href="#">
             <h3 class="product-name">Перфоратор Bosch bfg 2000</h3>
           </a>
@@ -198,7 +198,7 @@
       <div class="contacts">
         <h4>Контакты</h4>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-        <img src="img/map.png" alt="Место расположения">
+        <img src="img/map.png" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <a href="#">Заблудились? Напишите нам!</a>
       </div>
     </section>
@@ -206,7 +206,7 @@
 
   <footer>
     <div class="footer-logo">
-      <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Логотип Техномарт"></a>
+      <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Техномарт"></a>
       <ul class="foter-navigation-list">
         <li class="footer-navigation-item"><a href="#">Компания</a></li>
         <li class="footer-navigation-item"><a href="#">Новости</a></li>
@@ -261,4 +261,3 @@
 </body>
 
 </html>
--->
