начал стилизацию подвала

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <footer>
     <div class="footer-logo">
       <a href="#"><img src="img/fotter-logo.png" width="220px" height="68px" alt="Техномарт"></a>
-      <ul class="foter-navigation-list">
+      <ul class="footer-navigation-list">
         <li class="footer-navigation-item"><a href="#">Компания</a></li>
         <li class="footer-navigation-item"><a href="#">Новости</a></li>
         <li class="footer-navigation-item"><a href="#">Каталог</a></li>
@@ -216,7 +216,9 @@
       </ul>
     </div>
     <div class="footer-contacts">
-      <address>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br> +7 (812) 555-05-55</address>
+      <address class="footer-address">
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8 <br>+7 (812) 555-05-55</p>
+      </address>
       <ul class="footer-category-list">
         <li class="footer-category-item"><a href="#">Материалы</a></li>
         <li class="footer-category-item"><a href="#">Техника</a></li>
@@ -227,9 +229,9 @@
     <div class="copyright">
       <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
       <ul class="social-list">
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фэйсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><img src="img/icon-vk.svg" alt="Вконтакте">Вконтакте</a></li>
+        <li><a href="#"><img src="img/icon-fb.svg" alt="Фэйсбук">Фэйсбук</a></li>
+        <li><a href="#"><img src="img/icon-insta.svg" alt="Инстаграм">Инстаграм</a></li>
       </ul>
       <div class="site-information">
         <b>Обратная связь:</b>
