--- a/index.html
+++ b/index.html
@@ -12,31 +12,36 @@
 <body>
   <header class="main-header">
     <div class="header-top-wrapper">
-      <div class="header-logo">
-        <a href="#"><img src="img/index-logo.png" width="220px" height="47px" alt="Логотип Техномарт"></a>
+      <div class="container-a">
+        <div class="header-logo">
+          <a href="#"><img src="img/index-logo.png" width="220px" height="47px" alt="Техномарт"></a>
+        </div>
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+          <p>
+            <label class="search-form-label" for="search">Поиск</label>
+            <button class="search-button" type="submit" name="button"></button>
+            <input class="form" id="search" type="search" placeholder="Поиск">
+          </p>
+        </form>
+        <ul class="order-interface">
+          <li class="bookmarks"><a href="#">Закладки:0</a></li>
+          <li class="cart"><a href="#">Корзина:0</a></li>
+          <li class="order-button"><a href="#">Оформить заказ</a></li>
+        </ul>
       </div>
-      <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
-        <p>
-          <label class="search-form-label" for="search">Поиск</label>
-          <input id="search" type="text" name="name" placeholder="Поиск">
-        </p>
-      </form>
-      <ul class="order-interface">
-        <li class="bookmarks"><a href="#">Закладки:0</a></li>
-        <li class="cart"><a href="#">Корзина:0</a></li>
-        <li class="order-button"><a href="#">Оформить заказ</a></li>
-      </ul>
     </div>
-    <div class="header-middle-wrapper">
-      <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
-      <address class="header-address">
-        <p class="phone">+7 (812) 555-05-55</p>
-        <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
-      </address>
-      <ul class="user-navigation">
-        <li class="login-link"><a href="login.html">Войти</a></li>
-        <li class="registration"><a href="registration.html">Регистрация</a></li>
-      </ul>
+    <div class="container-b">
+      <div class="header-middle-wrapper">
+        <h1 class="site-label">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+        <address class="header-address">
+          <p class="phone">+7 (812) 555-05-55</p>
+          <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
+        </address>
+        <ul class="user-navigation">
+          <li class="login-link"><a href="login.html">Войти</a></li>
+          <li class="registration"><a href="registration.html">Регистрация</a></li>
+        </ul>
+      </div>
     </div>
     <nav class="main-navigation">
       <ul class="site-navigation">
@@ -49,6 +54,7 @@
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
     </nav>
+    </div>
   </header>
 
   <main>
@@ -227,17 +233,19 @@
       </ul>
     </div>
     <div class="copyright">
-      <p>© 2010–2019 Компания «Техномарт» Все права защищены</p>
+      <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
       <ul class="social-list">
-        <li><a href="#"><img src="img/icon-vk.svg" alt="Вконтакте">Вконтакте</a></li>
-        <li><a href="#"><img src="img/icon-fb.svg" alt="Фэйсбук">Фэйсбук</a></li>
-        <li><a href="#"><img src="img/icon-insta.svg" alt="Инстаграм">Инстаграм</a></li>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фэйсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
       </ul>
       <div class="site-information">
-        <b>Обратная связь:</b>
-        <a class="feedback" href="mail@htmlacademy.ru">HTML Academy</a>
-        <b>Разработано:</b>
-        <a class="create" href="https://htmlacademy.ru">HTML Academy</a>
+        <p>Обратная связь:<br>
+          <a class="feedback" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p>Разработано -<br>
+          <a class="create" href="https://htmlacademy.ru">htmlacademy.ru</a>
+        </p>
       </div>
     </div>
   </footer>
