предворительная верстка попапа

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -14,7 +15,7 @@
     <div class="header-top-wrapper">
       <div class="container container-flex">
         <div class="header-logo">
-          <a href="#">Техномарт</a>
+          <a href="#" aria-label="Техномарт"></a>
         </div>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
           <p>
@@ -38,7 +39,12 @@
           <p class="place">г. Санкт-Петербург, ул. Б. Конюшенная д. 19/8</p>
         </address>
         <ul class="user-navigation">
-          <li class="login-link"><a href="login.html">Войти</a></li>
+          <li class="login-link"><a class="login" href="login.html">Войти
+              <svg class="login-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
+                <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z" />
+                <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z" /></svg>
+            </a>
+          </li>
           <li class="registration"><a href="registration.html">Регистрация</a></li>
         </ul>
       </div>
@@ -192,22 +198,20 @@
       <div class="container container-flex">
         <div class="about-us">
           <h4 class="about-us-label">КОМПАНИЯ «Техномарт»</h4>
-          <div class="paragraph-left">
-            <p class="paragraph-1">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-            <p class="paragraph-2">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-          </div>
+          <p class="paragraph-one">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+          <p class="paragraph-two">Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
           <ul class="delivers-list">
-            <li class="delivers-list-item">Деловые линии</li>
-            <li class="delivers-list-item">Автотрейдинг</li>
-            <li class="delivers-list-item">ЖелДорЭкспедиция</li>
+            <li class="busines-line">Деловые линии</li>
+            <li class="autotrade">Автотрейдинг</li>
+            <li class="expedition">ЖелДорЭкспедиция</li>
           </ul>
-          <a class="about-us-link" href="#">Подробнее о компании</a></li>
+          <div class="about-us-link">
+            <a href="#">Подробнее о компании</a></li>
+          </div>
         </div>
         <div class="contacts">
-          <div class="paragraph-right">
-            <h4 class="contacts-label">Контакты</h4>
-            <p class="paragraph-3">Вы можете забрать товар сами, заехав в наш офис:</p>
-          </div>
+          <h4 class="contacts-label">Контакты</h4>
+          <p class="paragraph-three">Вы можете забрать товар сами, заехав в наш офис:</p>
           <img class="map" src="img/map.png" width: "300px" height: "158px" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
           <a class="write-us-link" href="#">Заблудились? Напишите нам!</a>
         </div>
@@ -244,9 +248,25 @@
       <div class="container container-flex">
         <p>© 2010–2019 Компания «Техномарт» <br> Все права защищены</p>
         <ul class="social-list">
-          <li><a class="vk" href="#">Вконтакте</a></li>
-          <li><a class="fb" href="#">Фэйсбук</a></li>
-          <li><a class="inst" href="#">Инстаграм</a></li>
+          <li><a class="vk" href="#" area-label="Вконтакте">
+              <svg class="vk-logo" xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15">
+                <path fill="#FFF"
+                  d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z" />
+              </svg>
+            </a>
+          </li>
+          <li><a class="fb" href="#" area-label="Фэйсбук">
+              <svg class="fb-logo" xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22">
+                <path fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" /></svg>
+            </a>
+          </li>
+          <li><a class="inst" href="#" area-label="Инстаграм">
+              <svg class="inst-logo" xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21">
+                <path fill="#FFF"
+                  d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z" />
+              </svg>
+            </a>
+          </li>
         </ul>
         <div class="site-information">
           <p>Обратная связь:<br>
@@ -261,21 +281,23 @@
   </footer>
 
   <div class="modal-contacts-popup">
-      <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
-        <div class="first-line">
-          <label for="your-name">Ваше имя</label>
-          <input id="your-name" type="text" name="name" placeholder="Имя фамилия">
-        </div>
-        <div class="second-line">
-          <label for="your-email">Ваш e-mail</label>
-          <input id="your-email" type="email" name="email" placeholder="email@example.ru">
-        </div>
-        <div class="third-line">
-          <label for="text">Текст письма:</label>
-          <input id="text" type="text" name="next" placeholder="В свободной форме">
-        </div>
+    <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
+      <div class="first-line">
+        <label class="name" for="your-name">Ваше имя:</label>
+        <input class="modal-name" id="your-name" type="text" name="name" placeholder="Имя фамилия">
+      </div>
+      <div class="second-line">
+        <label class="email" for="your-email">Ваш e-mail:</label>
+        <input class="modal-email" id="your-email" type="email" name="email" placeholder="email@example.ru">
+      </div>
+      <div class="third-line">
+        <label class="text" for="text-form">Текст письма:</label>
+        <input class="modal-text" id="text-form" type="text" name="next" placeholder="В свободной форме">
+      </div>
+      <div class="fourth-line">
         <button class="popup-button" type="submit">Отправить</button>
-      </form>
+      </div>
+    </form>
   </div>
 
 </body>
