Закончил верстку popup

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
   </footer>
 
   <div class="modal-contacts-popup">
+    <button class="modal-close" type="button" name="button"></button>
     <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
       <div class="first-line">
         <label class="name" for="your-name">Ваше имя:</label>
@@ -298,6 +299,10 @@
         <button class="popup-button" type="submit">Отправить</button>
       </div>
     </form>
+  </div>
+  <div class="map-popup">
+    <img class="big-map" src="img/big-map.png" alt="Большая Конюшенная улица 19">
+    <button class="map-close" type="button" name="button"></button>
   </div>
 
 </body>
